[gd_scene load_steps=13 format=3 uid="uid://crmynushq3uf4"]

[ext_resource type="Script" uid="uid://b2ro1emf8d427" path="res://entities/enemy/enemy.gd" id="1_78jik"]
[ext_resource type="Script" uid="uid://bmq4ev24n01ct" path="res://components/stats_component.gd" id="2_im2q6"]
[ext_resource type="Script" uid="uid://bdy33sbgoncok" path="res://components/hurtbox_component.gd" id="3_dt443"]
[ext_resource type="Script" uid="uid://csga2ypo703ny" path="res://components/hitbox_component.gd" id="4_4wwj3"]
[ext_resource type="Script" uid="uid://k2h0r714n0mp" path="res://components/hurt_component.gd" id="5_4wwj3"]
[ext_resource type="Script" uid="uid://b4i7mx467ysy7" path="res://components/flash_component.gd" id="6_d50e0"]
[ext_resource type="Material" uid="uid://ear8ugx7i76w" path="res://effects/white_flash_material.tres" id="7_4ohlc"]
[ext_resource type="Script" uid="uid://dqwr7ryn4yekc" path="res://components/shake_component.gd" id="7_61ikd"]
[ext_resource type="Script" uid="uid://dsy5yj0hshq3h" path="res://components/spawner_component.gd" id="8_721x4"]
[ext_resource type="PackedScene" uid="uid://dtq5lq22d46rs" path="res://effects/explosion_effect.tscn" id="9_eaj7m"]
[ext_resource type="Script" uid="uid://btvdcwmic1jcu" path="res://components/death_component.gd" id="10_a8fs5"]
[ext_resource type="PackedScene" uid="uid://dgvae28w5k7of" path="res://components/health_bar.tscn" id="11_7vrfk"]

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
y_sort_enabled = true
collision_layer = 2
collision_mask = 2
script = ExtResource("1_78jik")

[node name="Rig" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Rig"]
unique_name_in_owner = true

[node name="HurtboxComponent" type="Area2D" parent="Rig" node_paths=PackedStringArray("flash_component")]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 0
script = ExtResource("3_dt443")
flash_component = NodePath("../../FlashComponent")
metadata/_custom_type_script = "uid://bdy33sbgoncok"

[node name="HitboxComponent" type="Area2D" parent="Rig"]
unique_name_in_owner = true
collision_layer = 0
script = ExtResource("4_4wwj3")
metadata/_custom_type_script = "uid://csga2ypo703ny"

[node name="SpawnerComponent" type="Node2D" parent="Rig"]
unique_name_in_owner = true
script = ExtResource("8_721x4")
scene = ExtResource("9_eaj7m")
metadata/_custom_type_script = "uid://dsy5yj0hshq3h"

[node name="HealthBar" parent="Rig" node_paths=PackedStringArray("stats_component") instance=ExtResource("11_7vrfk")]
stats_component = NodePath("../../StatsComponent")

[node name="StatsComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_im2q6")
metadata/_custom_type_script = "uid://bmq4ev24n01ct"

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
unique_name_in_owner = true
script = ExtResource("5_4wwj3")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../Rig/HurtboxComponent")
metadata/_custom_type_script = "uid://k2h0r714n0mp"

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
unique_name_in_owner = true
script = ExtResource("6_d50e0")
flash_material = ExtResource("7_4ohlc")
sprite = NodePath("../Rig/AnimatedSprite2D")
metadata/_custom_type_script = "uid://b4i7mx467ysy7"

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
unique_name_in_owner = true
script = ExtResource("7_61ikd")
node = NodePath("../Rig/AnimatedSprite2D")
metadata/_custom_type_script = "uid://dqwr7ryn4yekc"

[node name="DeathComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "death_effect_spawner_component")]
unique_name_in_owner = true
script = ExtResource("10_a8fs5")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
death_effect_spawner_component = NodePath("../Rig/SpawnerComponent")
metadata/_custom_type_script = "uid://btvdcwmic1jcu"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
